# ia-web-scraping

./: AI_WEB.ipynb  LICENSE  README.md  main.py  pyproject.toml  ui.py
src/: api.py  ui.py  util.py
src/ui/: ui.py
