[project]
name = "ia-web-scraping"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "langchain-core (>=0.3.75,<0.4.0)",
    "langchain-google-genai (>=2.1.10,<3.0.0)",
    "langchain-community (>=0.3.29,<0.4.0)",
    "pypdf (>=6.0.0,<7.0.0)",
    "beautifulsoup4 (>=4.13.5,<5.0.0)",
    "streamlit (>=1.49.0,<2.0.0)",
    "fastapi[standard] (>=0.116.1,<0.117.0)",
    "scikit-learn (>=1.7.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.30.1"
black = "^25.1.0"
ruff = "^0.12.10"

